# mongo_history_plugin

./: CMakeLists.txt  README.md  mongo_history_plugin.cpp
include/eosio/mongo_history_plugin/: mongo_history_plugin.hpp
